--- a/article.html
+++ b/article.html
@@ -210,8 +210,8 @@
                                         <div class="comment-date">15.10.16</div>
                                     </div>
                                     <div class="actions-right">
-                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
                                         <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
+                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt="">5</a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </header>
@@ -223,14 +223,15 @@
                                 <li>
                                     <article class="answer-comment">
                                         <header>
-                                            <img src="img/Oval_avatar2.png" alt="avatar">
+                                            <img src="img/oval_avatar3.png" alt="avatar">
                                             <div class="comment-left">
-                                                <div class="comment-author">Tamila Drake</div>
+                                                <div class="comment-author">John Cash</div>
                                                 <div class="comment-date">15.10.16</div>
                                             </div>
+                                            <div class="comment-to-user"><a href="#">to Tamila Drake</a></div>
                                             <div class="actions-right">
-                                                <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
                                                 <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
+                                                <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt="">5</a>
                                             </div>
                                             <div class="clearfix"></div>
                                         </header>
@@ -248,14 +249,14 @@
                         <li>
                             <article class="single-comment">
                                 <header>
-                                    <img src="img/Oval_avatar2.png" alt="avatar">
+                                    <img src="img/oval_avatar4.png" alt="avatar">
                                     <div class="comment-left">
                                         <div class="comment-author">Tamila Drake</div>
                                         <div class="comment-date">15.10.16</div>
                                     </div>
                                     <div class="actions-right">
-                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
                                         <a href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
+                                        <a href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt="">5</a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </header>
@@ -265,10 +266,11 @@
                             </article>
                         </li>
                     </ul>
-
-                    <a href="#" class="show-comments btn ">
-                        Show more comments
-                    </a>
+                    <div class="all-comments">
+                        <a href="#" class="show-comments btn ">
+                            Show more comments
+                        </a>
+                    </div>
                 </div> <!-- post users -->
                 <!--<div class="clearfix"></div>-->
 
