--- a/article.html
+++ b/article.html
@@ -277,11 +277,11 @@
                         </li>
 
                         <li>
-                            <article class="single-comment-next">
+                            <article class="single-comment">
                                 <header>
                                     <img src="img/oval_avatar4.png" width="39" height="39" alt="avatar">
                                     <div class="comment-left">
-                                        <div class="comment-author">Tamila Drake</div>
+                                        <div class="comment-author">Billy Hudson</div>
                                         <div class="comment-date">15.10.16</div>
                                     </div>
                                     <div class="actions-right">
@@ -292,14 +292,13 @@
                                     <div class="clearfix"></div>
                                 </header>
                                 <p class="comment-item-text">
-                                    Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.
+                                    Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio.
                                 </p>
                             </article>
                         </li>
                     </ul>
                 </div> <!-- post users -->
             </section>
-
     </article>
     <div class="article-text show-all">
         <a href="#" class="show-comments">Show more comments</a>
